--- a/_includes/cfp.html
+++ b/_includes/cfp.html
@@ -3,15 +3,10 @@
 <div class="row">
   <div class="col s12">
       <h3 class="header"><i class="material-icons">description</i> Workshop Objective</h3>
-      <p>
-        Artificial intelligence (AI) continues to proliferate everyday life aided by the advances in automation, algorithms, and innovative hardware and
-software technologies. With the growing prominence of AI, Multimodal Large Language model (MLLM) has been rising as new foundational
-model architecture that uses powerful Large Language Model (LLM) with multimodal tasks efficiency. MLLM are able to achieve surprising
-capabilities based on text and images, suggesting path for Artificial General Intelligence (AGI). With the advent of new frontiers on execution
-of MLLM, we are facing new challenges on the ecosystem of software/hardware co-design. There is a realization about the energy cost of
-developing and deploying MLLM. Training and inferencing the most successful MLLM models has become exceedingly power-hungry often
-dwarfing the energy needs of entire households for years. At the edge, applications which use these LLMs models for inference are ubiquitous
-in cell phones, appliances, smart sensors, vehicles, and even wildlife monitors where efficiency is paramount for practical reasons.</p>
+      <p>With the advent of ChatGPT and other language models, Generative AI and LLMs have captured the imagination of whole world! A new wave of intelligent computing, driven by recent advances in machine learning and cognitive algorithms coupled with process technology and new design methodologies, has the potential to  usher unprecedented disruption in the way modern computing systems are designed and deployed. These new and innovative approaches often provide an attractive and efficient alternative not only in terms of performance but also power, energy, and area. This disruption
+is easily visible across the whole spectrum of computing systems -- ranging from low end mobile devices to large scale data centers. Applications that benefit from efficient machine learning include computer vision and image processing, language understanding,
+speech and gesture recognition, malware detection, autonomous driving, and many more. Naturally, these applications have diverse requirements for performance, energy, reliability, accuracy, and security that demand a holistic approach to designing the hardware, software, and intelligence algorithms to achieve the best outcome. We invite full-length papers describing original, cutting-edge, and even work-in-progress research projects about efficient machine learning.
+       </p>
   </div>
 </div>
 <div class="row">
