--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -44,8 +44,9 @@
         </div>
         <div class="ed-grid-item-header-meta-right">
             <h5 class="dark-primary" style="margin: 0;">Room: {{ page.event_room }}</h5>
-	    <h5 class="dark-primary" style="margin: 0;"><a href="{{ page.webinar_link }}"
+<!--	    <h5 class="dark-primary" style="margin: 0;"><a href="{{ page.webinar_link }}"
 		    target="_blank"><span style="white-space: nowrap;">Click here for Online Webinar Registration</span></a></h5>
+-->
             <h5 class="primary-text" style="margin: 0;">{{ event_session_header }}</h5>
         </div>
         <div class="ed-grid-item-header-note">
