--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -149,6 +149,8 @@
                     {% assign talk_class_header = "Welcome" %}
 		{% when 'session' %}
                     {% assign talk_class_header = "Session" %}
+		{% when 'talk' %}
+                    {% assign talk_class_header = "Talk" %}
                 {% when 'close' %}
                     {% assign talk_class_header = "Close" %}
                 {% when 'break' %}
@@ -245,7 +247,7 @@
 
                 {% elsif p.type == "announce" %}
                     <h3 class="dark-primary">{{ p.title }}</h3>
-                {% elsif p.type == "welcome" or p.type == "close" or p.type == "session" %}
+                {% elsif p.type == "welcome" or p.type == "close" or p.type == "session" or p.type == "talk" %}
                     <h3 class="dark-primary">{{ p.title }}</h3>
                     {% if p.speaker %}
                     <h4 class="light-primary">
